--- a/style.css
+++ b/style.css
@@ -175,6 +175,25 @@ body {
     animation: russianGradientAnimation 15s ease infinite;
 }
 
+@keyframes belarusianGradientAnimation {
+    0% { background-position: 50% 0%; }
+    50% { background-position: 50% 100%; }
+    100% { background-position: 50% 0%; }
+}
+
+.belarusian-background {
+    background: linear-gradient(to bottom, 
+                #d22730 0%, /* Rot */
+                #4aa657 100%), /* Grün */
+                linear-gradient(to right, 
+                white 0%, 
+                transparent 10%); /* Weißer Streifen links mit sanftem Übergang */
+    background-size: 100% 150%, 100% 100%;
+    animation: belarusianGradientAnimation 15s ease infinite;
+    position: relative;
+}
+
+
 #particles-js {
     position: absolute;
     width: 100%;
